--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ alt="alt-logotype" class="animated fadeInUp ">
    <h5 class="content text-center ">I'm a  web & app developer with an obsession for photography and design.</h5>
 <aside> </aside>
 <footer>
- <h3 class="left text-pop-up-top">  SOON </h3>
+ <h3 class="right text-pop-up-top">  SOON </h3>
 </footer>
 </div>
 </body>
