--- a/index.html
+++ b/index.html
@@ -23,35 +23,32 @@
         <meta name="theme-color" content="#DBE6F6">
         <meta name="viewport"   content="width=device-width,  minimum-scale=1, initial-scale=1, shrink-to-fit=no">
 
-   <link rel="stylesheet" type="text/css" href="css\2017.css">
-      <link rel="stylesheet" href="css/wing1.css"/>
+   <link rel="stylesheet" type="text/css" href="css\design.css">
+      <link rel="stylesheet" href="css/wing.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 </head>
 <!-- back in action, I'm still working on this. -->
 <!-- hero heads  -->
 <body>
-<header class="full-screen hero   center ">
-  <div class="">
-    <div class="">
- <h1 class="animated fadeInUp  left "> Hello there.</h1>
+<header class=" full-screen row  ">
+    <div class="hero container center text-center col-1">
+      <h1 class="animated   left "> Hello there.</h1>
+      <h2 class=" animated  center ">  Maitreya Vyas </h2>
+       <h5 class="content text-center ">I'm a  web & app developer with an obsession for photography and design.</h5>
     <img
 sizes="(max-width: 800px) 100vw, 800px"
 srcset="
 images/Uabove_n6as7l_c_scale,w_100.png 100w,
 images/Uabove_n6as7l_c_scale,w_800.png 800w"
 src="images/Uabove_n6as7l_c_scale,w_800.png"
-alt="alt-logotype" class="animated fadeInUp ">
-        <h2 class=" tracking-in-expand center ">  Maitreya Vyas </h2>
-  </div>
+alt="alt-logotype" class="animated  ">
 </div>
 </header>
-  <div class="col-1">
-  <section>
-   <h5 class="content text-center ">I'm a  web & app developer with an obsession for photography and design.</h5>
-<aside> </aside>
+  <aside> </aside>
+
 <footer>
- <h3 class="right text-pop-up-top">  SOON </h3>
+ <h6 class="center">  COMING SOON </h6>
 </footer>
 </div>
 </body>
