--- a/index.html
+++ b/index.html
@@ -31,20 +31,21 @@
 <!-- back in action, I'm still working on this. -->
 <!-- hero heads  -->
 <body>
-<header class=" full-screen row  ">
-    <div class="hero container center text-center col-1">
+<header class=" full-screen center  ">
+    <div class="col-1">
       <h1 class="animated   left "> Hello there.</h1>
-      <h2 class=" animated  center ">  Maitreya Vyas </h2>
-       <h5 class="content text-center ">I'm a  web & app developer with an obsession for photography and design.</h5>
+
     <img
 sizes="(max-width: 800px) 100vw, 800px"
 srcset="
 images/Uabove_n6as7l_c_scale,w_100.png 100w,
 images/Uabove_n6as7l_c_scale,w_800.png 800w"
 src="images/Uabove_n6as7l_c_scale,w_800.png"
-alt="alt-logotype" class="animated  ">
+alt="alt-logotype" class="animated  ">     <h2 class=" animated  center ">  Maitreya Vyas </h2>
+     <h5 class="content text-center ">I'm a  web & app developer with an obsession for photography and design.</h5>
 </div>
 </header>
+
   <aside> </aside>
 
 <footer>
