Changes to heads

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ srcset="
 images/Uabove_n6as7l_c_scale,w_100.png 100w,
 images/Uabove_n6as7l_c_scale,w_800.png 800w"
 src="images/Uabove_n6as7l_c_scale,w_800.png"
-alt="alt-logotype" class="animated  ">     <h2 class=" animated  center ">  Maitreya Vyas </h2>
+alt="alt-logotype" class="animated  ">
+  <h2 class=" animated  center ">  Maitreya Vyas </h2>
      <h5 class="content text-center ">I'm a  web & app developer with an obsession for photography and design.</h5>
 </div>
 </header>
